# newmongo

./: CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yml  movies.thrift
config/: service-config.json
gen-cpp/: MovieInfoService.cpp  MovieInfoService.h  MovieInfoService_server.skeleton.cpp  RecommenderService.cpp  RecommenderService.h  RecommenderService_server.skeleton.cpp  UserLikesService.cpp  UserLikesService.h  UserLikesService_server.skeleton.cpp  movies_constants.cpp  movies_constants.h  movies_types.cpp  movies_types.h
gen-lua/: movies_MovieInfoService.lua  movies_RecommenderService.lua  movies_UserLikesService.lua  movies_ttypes.lua
nginx_reverse_proxy/conf/: nginx.conf
nginx_reverse_proxy/lua-scripts/api/movies_service/: title.lua
nginx_reverse_proxy/lua-scripts/api/recommender_service/: get.lua  upload.lua
script/: get_recommendations.sh  upload_recommendation.sh
src/: CMakeLists.txt  ClientPool.h  GenericClient.h  ThriftClient.h  logger.h  utils.h  utils_mongodb.h
src/MovieInfoService/: CMakeLists.txt  MovieInfoHandler.h  MovieInfoHandler.h_working  MovieInfoService.cpp  MovieInfoService.cpp_working
src/RecommenderService/: CMakeLists.txt  RecommenderHandler.h  RecommenderService.cpp
src/UserLikesService/: CMakeLists.txt  UserLikesHandler.h  UserLikesService.cpp
